Fixed random artefact on mobile version

--- a/src/App.css
+++ b/src/App.css
@@ -377,7 +377,6 @@ section > * {
 
     #timeline ul li:nth-child(even) .box:before {
         left: -15px;
-        border-width: 8px 16px 8px 0;
         border-color: transparent aqua;
     }
 
